<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cool_blues"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/nicknameText"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80sp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="28sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/nicknameText"
        android:layout_width="300sp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:textColor="#FFFFFF"
        android:textColorHint="#90FFFFFF"
        android:hint="@string/enter_nickname"
        android:textAlignment="center"
        android:backgroundTint="#80FFFFFF"
        android:maxLines="1"
        android:maxLength="14"
        android:inputType="text"
        android:textCursorDrawable="@null"
        android:textSize="24sp" />

    <Button
        android:layout_below="@+id/nicknameText"
        android:id="@+id/enterchatButton"
        android:text="@string/go_to_chat"
        android:textColor="#000000"
        android:layout_width="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp"
        android:layout_height="wrap_content" />

</RelativeLayout>